# tensor_based_modal_decomposition_method

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  GEOMETRY_AWARE_QUICKSTART.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  benchmark_baseline.txt  benchmark_dict_keys.py  benchmark_list_comp.py  benchmark_list_keys.py  commit_msg.txt  measure_brugge_runtime.py  patch.diff  patch.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
algorithm/: data_visualize.ipynb  exp_tbmd_2.3_probability.ipynb  exp_tbmd_2.4_visualization.ipynb  forecast_next_state.ipynb  main_tbmd.ipynb  main_tbmd.py
algorithm/TBMD/: config.py
algorithm/docs/: GEOMETRY_AWARE_TBMD.md  GeometryAwareCS_README.md  GeometryAwareCS_README_ru.md  README.md  TBMD_CORE_MODULES.md
algorithm/examples/: README.md
algorithm/experiments/: exp_tbmd_2.1&2.2.ipynb  exp_tbmd_2.3_probability.ipynb  exp_tbmd_2.4.ipynb  exp_tbmd_2.4_visualization.ipynb  exp_tbmd_4_digital_twin.ipynb  new_exp_tbmd_2.1&2.2.ipynb  new_exp_tbmd_2.4.ipynb  new_exp_tbmd_2.4_visualization.ipynb
algorithm/reports/: summary_all.txt
docs/: README.md
examples/: 02_navier_stokes_optimal_forecasting.py  README.md
notebooks/: data_visualize.ipynb
scripts/: analyze_cs_recovery_diagnostics.py  analyze_windowed_tbmd_qr_cs.py  evaluate_all_models.py  evaluate_hybrid_tbmd_qr_cs_forecasting.py  evaluate_windowed_tbmd_qr_cs_forecasting.py  final_refit_fast_tplus1.py  generate_model_examples.py  tune_fast_tplus1_accuracy.py  tune_fast_tplus1_cached_residual.py  tune_navier_stokes_models.py  tune_stage4_rank_sweep.py  tune_stage6_prediction_quality.py  tune_tbmd_qr_cs_next_step_forecasting.py  tune_windowed_tbmd_qr_cs_sensor_budget.py
tests/: conftest.py
(+541 files in other folders)
